[tool.poetry]
name = "notepad-manipulation"
version = "0.1.0"
description = ""
authors = ["Patrick Childers <patrickchildersit@gmail.com>"]
readme = "README.md"
packages = [{include = "notepad_manipulation"}]

[tool.poetry.dependencies]
python = "^3.10"
pywin32 = "^304"
pillow = "^9.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
